# dhis2

./: .gitignore  beta_ecological.py  calculate_morans_i.py  compare_population_fractions.py  compare_survey_dhis2_coverage.py  compute_calibrated_coverage.py  compute_dhis2_coverage_estimates.py  compute_dhis2_estimates.py  compute_dhs_estimates.py  compute_pma_estimates.py  compute_population_fractions_un.py  compute_total_populations.py  compute_woreda_travel_distances.py  copy_dhis2_data.py  dhis2_utils.py  find_outliers_ols.py  generate_neighbors.py  match_facilities_to_boundaries.py  match_facility_names.py  match_woreda_names.py  match_zone_names.py  plot_absolute_differences.py  plot_calibrated_coverage_maps.py  plot_dhis2_correlations.py  plot_population_comparison.py  pyproject.toml  readme.md  stats_utils.py  validate_geo_matching.py  validate_matching.py  validate_woreda_estimates_kea2023.py  validate_woreda_estimates_road_access.py
dependency_graph/: dependency_graph.dot
